[package]
name = "neli-wifi"
version = "0.7.0"
authors = ["eonm <eon.mathis@gmail.com>", "Max Verevkin <maxxverrr@gmail.com>"]
edition = "2021"
description = "Communicate with nl80211"
repository = "https://github.com/MaxVerevkin/neli-wifi"
license = "MIT"
keywords = ["wifi", "neli", "netlink", "nl80211"]

[features]
default = []
async = ["neli/async"]

[dependencies]
neli = { version = "0.7.0-rc3", git = "https://github.com/jbaublitz/neli.git" }
neli-proc-macros = { version = "0.2.0-rc3", git = "https://github.com/jbaublitz/neli.git" }

[dev-dependencies]
neli-wifi = { path = ".", features = ["async"] }

[dev-dependencies.tokio]
version = "1.0"
features = ["macros", "rt-multi-thread"]

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features --no-deps --open
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
